# bundleclaw

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
node-cli/: README.md  package-lock.json  package.json
node-cli/src/: index.ts
python-cli/: README.md  pyproject.toml
python-cli/bundleclaw/: cli.py
spec/: FORMAT.md
