[project]
name = "bundleclaw"
version = "0.1.1"
description = "Migrate OpenClaw agent state between machines"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "cryptography>=43.0.0"
]

[project.scripts]
bundleclaw = "bundleclaw.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
